# guardrails

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG-canvas-refresh.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  arc-guard-agent-prompts.md  docker-compose.yml  package.json  pdf_text.txt  pnpm-lock.yaml  scratch-guardrail-flow-rating.md  scratch.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  pypi-publish.yml
.vitepress/: config.mts
.vitepress/theme/: canvasLayout.ts  canvasMarkdown.ts  canvasParser.ts  canvasRegistry.ts  custom.css  index.ts
apps/guardrail-flow/: .prettierignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  output.txt  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
arc-guard/: pyproject.toml
arc-guard/src/arc_guard/: __init__.py  registry.py
arc-guard/src/arc_guard/adapters/: __init__.py  unleash_provider.py
arc-guard/src/arc_guard/inspectors/: custom.py  injection.py  presidio.py
arc-guard/src/arc_guard/protocols/: __init__.py  entity_provider.py  strategy.py
arc-guard/src/arc_guard/strategies/: block.py
arc-guard/tests/: test_inspectors.py  test_nats_reporter.py  test_unleash_provider.py
dev/: README.md
dev/scripts/: mac-tidy
docs/: arc-guardrails-component-inventory.md  public-surface.md  technologies-used.md
docs/architecture/: README.md  rewrite-roadmap.md  universal-guardrail-revisit.md
docs/canvases/: README.md  pipeline-swimlane.canvas  request-dag-benign.canvas  request-dag-block.canvas  request-dag-pii.canvas  request-flow-tree.canvas
docs/vitepress/: index.md
docs/walkthrough/: 001-arc-guard-rails.md  002-rewrite-foundation.md  003-sanitization-policy-core.md  004-observability-runtime.md  005-intent-fidelity-rehydration.md  006-jailbreak-deception-eval.md  007-integration-api-delivery.md  010-lifecycle-sink.md  011-detection-extensibility.md  012-dashboard-backend-data-plane.md  013-guardrailflow-dashboard.md  014-pipeline-instrumentation-completion.md  015-semantic-intent-inspector.md  README.md  system-canvas.md  system-overview.md
examples/: conftest.py  pytest.ini
examples/api/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schemas.py
examples/api/tests/: test_api_smoke.py
examples/cli-batch/: README.md  batch.py  inputs.jsonl  pyproject.toml
examples/cli-batch/tests/: test_cli_smoke.py
examples/fastapi-middleware/: README.md  app.py  pyproject.toml
examples/fastapi-middleware/tests/: test_middleware_smoke.py
examples/library-in-process/: README.md  main.py  pyproject.toml
examples/library-in-process/tests/: test_library_smoke.py
examples/sidecar-http/: README.md  client.sh  pyproject.toml
examples/sidecar-http/tests/: test_sidecar_smoke.py
python/: pyproject.toml
python/arc-guardrails/: README.md
python/arc-guardrails/src/arc_guard/: config.py  pipeline.py  types.py
python/arc-guardrails/src/arc_guard/adapters/: nats_reporter.py
python/arc-guardrails/src/arc_guard/flags/: static_provider.py
python/arc-guardrails/src/arc_guard/inspectors/: semantic.py
python/arc-guardrails/src/arc_guard/middleware/: __init__.py  otel.py
python/arc-guardrails/src/arc_guard/protocols/: flag_provider.py  guard.py  inspector.py  middleware.py  reporter.py
python/arc-guardrails/src/arc_guard/reporters/: log_reporter.py  null_reporter.py  webhook_reporter.py
python/arc-guardrails/src/arc_guard/strategies/: hash.py  redact.py
python/arc-guardrails/tests/: test_pipeline.py  test_strategies_reporters_flags.py
python/src/arc_common/: __init__.py  observability.py
scripts/: check.sh  release-check.sh  sync-canvases.sh  update-speckit-context.sh  verify-adapters.sh
shared/visuals/: dottedSurface.ts
specs/: index.md
specs/001-arc-guard-rails/: plan.md  spec.md  tasks.md
specs/002-rewrite-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sanitization-policy-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tools/: README.md  check_adopt_vs_build.py  check_async_blocking.py  check_dependency_tree.py  check_docs_links.py  check_import_graph.py  check_public_surface.py  replay_corpus.py  run_evaluation.py  sse_dashboard.py
(+270 files in other folders)
