[project]
name = "arc-guard"
version = "0.1.0"
description = "General-purpose Python guardrails library — PII detection, prompt injection prevention, toxic output filtering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
semantic = [
    "torch>=2.0",
    "transformers>=4.30",
]
nats = [
    "nats-py>=2.3",
]
unleash = [
    "UnleashClient>=5.0",
]
webhook = [
    "httpx>=0.25",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
arc = [
    "arc-guard[nats,unleash,otel]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_guard"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/arc_guard"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 75
