[project]
name = "arc-common"
version = "0.1.0"
description = "Shared observability utilities for A.R.C. Platform Python services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_common"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
