[project]
name = "arc-guard-example-api"
version = "0.1.0"
description = "OpenAI-compatible chat-completions API that runs every request through arc-guard pre/post intercept."
requires-python = ">=3.11"
dependencies = [
    "arc-guard",
    "arc-guard-service[fastapi]",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py", "schemas.py"]
