[project]
name = "arc-guard-example-cli-batch"
version = "0.1.0"
description = "Example: arc-guard invoked as a CLI batch job."
requires-python = ">=3.11"
dependencies = [
    "arc-guard-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["batch.py", "inputs.jsonl"]
