[project]
name = "arc-guard-example-fastapi-middleware"
version = "0.1.0"
description = "Example: arc-guard mounted as FastAPI middleware in front of one route."
requires-python = ">=3.11"
dependencies = [
    "arc-guard-service[fastapi]",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["app.py"]
