[project]
name = "arc-guard-example-library-in-process"
version = "0.1.0"
description = "Example: arc-guard used as an in-process Python library."
requires-python = ">=3.11"
dependencies = [
    "arc-guard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]
